# Laplace

./: .aiexclude  .cursorignore  .cursorrules  .dockerignore  .editorconfig  .geminiignore  .gitattributes  .gitignore  .gitmodules  .laplace-session.example  .mcp.json  .pre-commit-config.yaml  AGENTS.md  AGENT_001_REPORT.md  AGENT_002_REPORT.md  AGENT_003_REPORT.md  AUDIT-CONSOLIDATED.md  AUDIT-DECOMPOSERS.md  AUDIT-LINKING.md  AUDIT-PERF.md  AUDIT-REPORT.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Claude_Bench.bat  DESIGN.md  Directory.Build.props  Directory.Build.targets  FLOWS.md  GLOSSARY.md  Justfile  LICENSE  Laplace.slnx  OPERATIONS.md  README.md  RULES.md  STANDARDS.md  Tony.bat  Tony_Hart-Desktop.bat  (+6 more)
cmake/windows-deps/sqlite/: CMakeLists.txt
engine/: CMakeLists.txt
engine/core/: CMakeLists.txt
engine/core/grammars/: CMakeLists.txt  README.md
engine/core/src/: astar.c  astar.cpp  attestation_engine.c  codepoint_table.c  content_witness_batch.c  etl_anchor.c  etl_ingest.c  etl_witness_conceptnet.c  glicko2.c  grammar_compose.cpp  grammar_decomposer.c  grammar_registry.c  grammar_rows.c  grammar_tags.c  grapheme_break.c  grapheme_floor.c  hash128.c  hash_composer.c  highway_table.c  hilbert4d.c  intent_stage.c  mantissa.c  math4d.c  merkle_dedup.c  normalize_nfc.c  score.c  sentence_break.c  super_fibonacci.c  text_decomposer.c  tier_tree.c  trajectory.c  ucd_xml.cpp  unicode_seed.cpp  version.c  word_break.c
engine/core/tests/: CMakeLists.txt  perfcache_env.cpp  test_astar.cpp  test_codepoint_table.cpp  test_etl_anchor.cpp  test_etl_ingest.cpp  test_glicko2.cpp  test_grammar_compose.cpp  test_grammar_decomposer.cpp  test_grammar_tags.cpp  test_grapheme_break.cpp  test_hash128.cpp  test_hash_composer.cpp  test_hilbert4d.cpp  test_intent_stage.cpp  test_mantissa.cpp  test_math4d.cpp  test_merkle_dedup.cpp  test_normalize_nfc.cpp  test_relation_law.cpp  test_score.cpp  test_sentence_break.cpp  test_super_fibonacci.cpp  test_text_decomposer.cpp  test_tier_tree.cpp  test_trajectory.cpp  test_version.cpp  test_word_break.cpp
engine/dynamics/: CMakeLists.txt
engine/dynamics/src/: bilinear_edges.cpp  circuit_extract.cpp  eigenmaps.cpp  ffn_edges.cpp  gram_schmidt.cpp  init.cpp  model_math.cpp  procrustes.cpp  sparsity.cpp  tbb_parallel.cpp
engine/dynamics/tests/: CMakeLists.txt  test_bilinear_edges.cpp  test_eigenmaps.cpp  test_gram_schmidt.cpp  test_init.cpp  test_model_math.cpp  test_procrustes.cpp  test_sparsity.cpp  test_toolchain.cpp
engine/include/laplace/: laplace.h
engine/manifest/: pos_tags.toml  relation_types.toml
engine/src/: laplace.cpp
engine/synthesis/: CMakeLists.txt
engine/synthesis/src/: arch_template.cpp  bf16_decoder.c  f32_gather.c  feature_extractor.cpp  format_writer.cpp  gguf_writer.cpp  init.cpp  per_token_magnitude.cpp  projection_per_token.cpp  qk_pairs_threshold.cpp  qk_pairs_threshold_pruned.cpp  qk_project_cached.cpp  recipe.cpp  reconstruct_w.cpp  safetensors_parser.cpp  sentencepiece_parser.cpp  tensor_decompose.cpp  tensor_dtype_codec.c  token_attn_scorer.cpp  version.cpp  weight_projection.cpp
engine/synthesis/tests/: CMakeLists.txt  test_arch_template.cpp  test_bf16_decoder.cpp  test_feature_extractor.cpp  test_gguf_writer.cpp  test_per_token_magnitude.cpp  test_projection_per_token.cpp  test_qk_pairs_threshold.cpp  test_qk_pairs_threshold_pruned.cpp  test_qk_project_cached.cpp  test_recipe.cpp  test_safetensors_parser.cpp  test_sentencepiece_parser.cpp  test_tensor_decompose.cpp  test_tensor_dtype_codec.cpp  test_token_attn_scorer.cpp  test_toolchain.cpp  test_version.cpp  test_weight_projection.cpp
engine/test/: test_placeholder.cpp
ext/laplace_pg/: CMakeLists.txt
ext/laplace_pg/sql/: laplace_pg--0.1.0.sql  laplace_pg.control
ext/laplace_pg/src/: laplace_pg.c
ext/laplace_pg/test/: CMakeLists.txt  smoke_test.c
extension/: CMakeLists.txt  Makefile  laplace--0.1.0.sql  laplace--1.0.0.sql  laplace.control
extension/laplace_geom/: CMakeLists.txt  laplace_geom.control.in  laplace_geom.sql.i
extension/laplace_geom/sql/: 01_meta.sql.in  02_hash128.sql.in  03_hash128_ops.sql.in  04_hilbert.sql.in  05_mantissa.sql.in  06_st_4d.sql.in  07_s3_opclass.sql.in  laplace_geom.sql.in  manifest.install  sqldefines.h.in  uninstall_laplace_geom.sql.in
extension/laplace_geom/src/: laplace_geom.c  lwgeom_win32_stubs.c
extension/laplace_geom/tests/: CMakeLists.txt
extension/laplace_substrate/: CMakeLists.txt  laplace_substrate.control.in  laplace_substrate.sql.i  laplace_substrate_upgrade.sql.i
extension/laplace_substrate/cmake/: SqlManifest.cmake
extension/laplace_substrate/docs/: FUNCTION_CATALOG.md  SQL_SURFACE.md
extension/laplace_substrate/sql/: 01_schema.sql.in  02_entities.sql.in  03_physicalities.sql.in  04_attestations.sql.in  05_indexes.sql.in  06_glicko2.sql.in  07_cascade.sql.in  08_sp_trajectory_ops.sql.in  09_brin_tier_ops.sql.in  10_bootstrap.sql.in  11_entities_exist_bitmap.sql.in  12_consensus_schema.sql.in  12_inspect.sql.in  13_consensus.sql.in  13_mu_law.sql.in  14_geometry_consensus.sql.in  14_period_fold.sql.in  15_converse.sql.in  15_readback.sql.in  16_inspect.sql.in  17_consensus_reads.sql.in  18_ops_surface.sql.in  19_geometry_consensus.sql.in  19_relation_law.sql.in  20_converse.sql.in  21_seed.sql.in  22_cascade_surface.sql.in  23_structural_surface.sql.in  24_identity_health.sql.in  25_intent_preflight.sql.in  26_generation.sql.in  27_apply_batch.sql.in  28_apply_batch_merge.sql.in  29_consensus_expand.sql.in  30_realize_branches.sql.in  31_consensus_reads.sql.in  32_lexical_reads.sql.in  33_lexical_variants.sql.in  33_taxonomy_expand.sql.in  34_contrast_expand.sql.in  (+15 more)
extension/laplace_substrate/src/: apply_batch.c  astar_path.c  consensus_bulk.c  consensus_fold_engine.c  consensus_fold_incremental.c  consensus_fold_io.h  consensus_fold_math.h  consensus_fold_step.c  consensus_fold_walks.c  consensus_lexical_reads.c  consensus_reads.c  containers_of.c  content_resolve.c  converse_native.c  converse_reads_native.c  descent_probe.c  recall.c  (+32 more)
extension/src/: laplace.c
(+3016 files in other folders)
